--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>boot-mybatis</module>
+        <module>boot-JdbcTemplate</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -21,6 +22,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <tomcat.version>8.5.31</tomcat.version>
     </properties>
 
     <dependencies>
