--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <modules>
         <module>boot-mybatis</module>
         <module>boot-JdbcTemplate</module>
+        <module>boot-aop</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
