--- a/boot-cache-redis/pom.xml
+++ b/boot-cache-redis/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!-- spring-boot redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
