--- a/boot-cache-redis/src/main/resources/application.yml
+++ b/boot-cache-redis/src/main/resources/application.yml
@@ -61,6 +61,28 @@ spring:
       filter:
         stat:
           log-slow-sql: true
+  redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: 192.168.1.185
+    # Redis服务器连接端口
+    port: 6379
+    password: nine123
+    # 连接超时时间
+    timeout: 60s
+    jedis:
+      pool:
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接池最大连接数(使用负值表示没有限制）
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
+
+
 logging:
   level:
     com:
