add send simple mail

--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <modules>
-        <module>boot-mybatis</module>
-        <module>boot-JdbcTemplate</module>
-        <module>boot-aop</module>
-        <module>boot-cache-redis</module>
-    </modules>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+
     <groupId>com.pemila</groupId>
     <artifactId>springboot-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -22,10 +11,25 @@
 
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.5.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <properties>
         <java.version>1.8</java.version>
         <tomcat.version>8.5.31</tomcat.version>
     </properties>
+
+    <modules>
+        <module>boot-mybatis</module>
+        <module>boot-JdbcTemplate</module>
+        <module>boot-aop</module>
+        <module>boot-cache-redis</module>
+        <module>boot-mail</module>
+    </modules>
 
     <dependencies>
         <dependency>
